--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Page Title</title>
-</head>
+</Amatullah Sajida Hello World>
 <body>
-	<h1>Amatullah Sajida Hello World</h1>
+	<h1>This is a Heading</h1>
 	<p>This is a paragraph.</p>
 </body>
 </html>
